lab1/Test/L1-A-12-22.output
Error Type B at Line 3
Error Type A at Line 8
Error Type B at Line 16
Error Type A at Line 20
Error Type B at Line 23
Error Type B at Line 26
