lab1/Test/L1-A-12-22.cmm
float Ee2cTuZzP5W8TmV ( ) {
  int gYneR = _v , ZZ 
  if ( EshQ )   if ( vhEE4NZEp )   DDP ;
else   while ( PXhpw81mzhzjqFiv7zkT )   return SAFl0hNV 
    ;


else   if $( qRVk6VnMs6SNUAd6qxo ) {
    qscEgRKX = okPlil1 || P92Uwg && ODk3KSzriLgha 
      * ! - jf6xbvq9MX5b0Y5XW ( IC == YAxcFb_MJmSR + rwLw 
      / sNmycLP9GDoi [ EtjCpv7 >= VAFAwbleEFEAw + toXHeAudX7 
      / k8LERlXW ( duGUOy , ifRKoEhQj2zx5YHj4bF > W - aLbao 
      * ( q6uIgaalB != ( JZ8ug_8vcM9lZ2bQNZrv <= hA ) . 
      HprgZ5m < zXAe3le ) . gAylCuUyFd - ! s06RKdXPDAX9GQ1 
      * 1901688813 ) ] - ! g_g9pGcQE5Y ( ) . XwhGKuW3W7 
      ) / ;
  }

}
&struct WdEM9JkdyRIf8IBgitp I [ 2084223527 ] 
;
int ;
int pSggW ( int CCLV8CcOcl int tZwl0IxkgAu ) {
}
int ;
int , D 

;
int ;
struct o7 {
  struct {
    int PAH_8bYD ;
  }oSO ;
};
